Tue Nov 23 02:39:44 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added light and heavy makefile targets for automatic testing.

	* added -s flag to malloc_t and cleaned up the output.

	* added realloc test code to malloc_t and immediately had to fix a
	pretty nasty realloc bug with the new code.

	* phased in the version 1.3.5 branch changes into the 2.0.0
	version.  looks like it was reasonably painless.

Mon Nov 22 22:21:56 1993  Gray Watson  (gray at toaster.antaire.com)

  	* Integrated tons of new heap code with per/block allocations (not
  	base 2) and better free list management with block splitting.

	* Releasing version 1.3.5.

	* Added more automatic and comprehensive malloc_t testing
	facilities with argv options.

	* removed library from linking with malloc_dbg.  good idea dave.

	* integrated some fixes and remove pre-main shit.

Mon Nov 15 00:39:51 1993  Gray Watson  (gray@fridge.antaire.com)

	* Added -T option to malloc_dbg: list-tokens for listing of debug
	tokens.

	* added ERROR_SIGNAL configure entry.  defaults to SIGABRT.

Sun Nov 14 23:08:03 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added 'never-reuse' token to never reuse free'd memory.

Mon Nov  8 05:44:58 1993  Gray Watson  (gray at toaster.antaire.com)

	* added ra_info to the contrib directory.  Big wow.

Wed Nov  3 00:56:19 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added check for pre-main calls to malloc.  HACK!

	* Added on_exit and atexit support to auto-call malloc_shutdown.
	Thanks much to Manfred, Dave, Scott, and Rich.

	* Added -m (minus) option to malloc_dbg.  Why didn't I think of
	this before?

Tue Nov  2 16:45:32 1993  Gray Watson  (gray at toaster.antaire.com)

	* Fixed problem with getenv processing.

Wed Oct 20 19:30:34 1993  Gray Watson  (gray at toaster.antaire.com)

	* Renamed malloc_debug to malloc_flags.

	* Added all malloc utility functions to malloc_lp.c.  Now
	programs can call malloc_shutdown (for instance) without fear.