@@ -1,5 +1,7 @@
 Tue Nov 23 02:39:44 1993  Gray Watson  (gray at toaster.antaire.com)
 
+	* fixed heap_check error with free blocks.
+
 	* Added light and heavy makefile targets for automatic testing.
 
 	* added -s flag to malloc_t and cleaned up the output.
@@ -574,5 +576,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray at toaster)
 	when MALLOC_ADDRESS was not working correctly.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.77 1993/11/23 09:37:06 gray Exp $
+$Id: ChangeLog,v 1.78 1993/11/23 09:47:03 gray Exp $
 -------------------------------------------------------------------------------
